// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Button render Button -- props circle 1`] = `
<div
  class="at-button at-button--normal at-button--circle"
>
  <!---->
  <div
    class="at-button__text"
  >
    
    click me
    
  </div>
</div>
`;

exports[`test Button render Button -- props disabled 1`] = `
<div
  class="at-button at-button--normal at-button--disabled"
>
  <!---->
  <div
    class="at-button__text"
  >
    
    click me
    
  </div>
</div>
`;

exports[`test Button render Button -- props full 1`] = `
<div
  class="at-button at-button--normal at-button--full"
>
  <!---->
  <div
    class="at-button__text"
  >
    
    click me
    
  </div>
</div>
`;

exports[`test Button render Button -- props loading 1`] = `
<div
  class="at-button at-button--icon at-button--normal"
>
  <div
    class="at-button__icon"
  >
    <div
      class="at-loading"
      style=""
    >
      <div
        class="at-loading__ring"
      />
      <div
        class="at-loading__ring"
        style=""
      />
      <div
        class="at-loading__ring"
        data-id="[object Object]"
      />
    </div>
  </div>
  <div
    class="at-button__text"
  >
    
    click me
    
  </div>
</div>
`;

exports[`test Button render Button -- props size(normal) 1`] = `
<div
  class="at-button at-button--normal"
>
  <!---->
  <div
    class="at-button__text"
  >
    
    click me
    
  </div>
</div>
`;

exports[`test Button render Button -- props size(primary) 1`] = `
<div
  class="at-button"
>
  <!---->
  <div
    class="at-button__text"
  >
    
    click me
    
  </div>
</div>
`;

exports[`test Button render Button -- props size(secondary) 1`] = `
<div
  class="at-button"
>
  <!---->
  <div
    class="at-button__text"
  >
    
    click me
    
  </div>
</div>
`;

exports[`test Button render Button -- props size(small) 1`] = `
<div
  class="at-button at-button--small"
>
  <!---->
  <div
    class="at-button__text"
  >
    
    click me
    
  </div>
</div>
`;
